# tap-kit

./: .gitignore  README.md  pyproject.toml  setup.py  sonar-project.properties
tap_kit/: __init__.py  client.py  executor.py  streams.py  utils.py
tap_kit/tests/: test_client.py
